Toolchain Makefile: add individual *-apply rules
 On branch scarv/xcrypto/v1.1.0
 Your branch is up-to-date with 'origin/scarv/xcrypto/v1.1.0'.

 Changes to be committed:
	modified:   src/toolchain/Makefile

--- a/src/toolchain/Makefile
+++ b/src/toolchain/Makefile
@@ -29,10 +29,15 @@ define rule_revert
 $(strip ${1})-revert :
 	@$${REPO_HOME}/src/toolchain/$(strip ${1})-revert.sh
 endef
+define rule_apply
+$(strip ${1})-apply:
+	@$${REPO_HOME}/src/toolchain/$(strip ${1})-apply.sh
+endef
 
 $(foreach COMPONENT,${COMPONENTS},$(eval $(call rule_build, ${COMPONENT})))
 $(foreach COMPONENT,${COMPONENTS},$(eval $(call rule_update,${COMPONENT})))
 $(foreach COMPONENT,${COMPONENTS},$(eval $(call rule_revert,${COMPONENT})))
+$(foreach COMPONENT,${COMPONENTS},$(eval $(call rule_apply, ${COMPONENT})))
 
 clone  : 
 	@${REPO_HOME}/src/toolchain/clone.sh
@@ -42,6 +47,8 @@ build  : $(foreach COMPONENT, ${COMPONENTS}, ${COMPONENT}-build )
 update : $(foreach COMPONENT, ${COMPONENTS}, ${COMPONENT}-update)
 
 revert : $(foreach COMPONENT, ${COMPONENTS}, ${COMPONENT}-revert)
+
+apply  : $(foreach COMPONENT, ${COMPONENTS}, ${COMPONENT}-apply)
 
 clean  :
 	@rm --force --recursive ${REPO_HOME}/build/toolchain
