Masking: Fix spike and bintils toolchain patches.
 On branch dev/masking-ise
 Changes to be committed:
	modified:   extern/riscv-opcodes
	modified:   src/test/assembler/Makefile
	renamed:    src/tests/assembler/test_masking_ise.S -> src/test/assembler/test_masking_ise.S
	modified:   src/toolchain/binutils.patch
	modified:   src/toolchain/spike.patch
	deleted:    tools/opcodes-maskingise

--- a/src/test/assembler/Makefile
+++ b/src/test/assembler/Makefile
@@ -3,7 +3,7 @@ BUILD_DIR   = $(REPO_BUILD)/tests/assembler
 
 ALL_TARGETS = 
 
-include $(REPO_HOME)/src/tests/common.mk
+include $(REPO_HOME)/src/test/common.mk
 
 $(eval $(call add_assembler_target,test_archstr.S))
 $(eval $(call add_assembler_target,test_simple_assembly.S))
